[gd_scene load_steps=66 format=3 uid="uid://cah2kesntw36e"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_1puio"]
[ext_resource type="Texture2D" uid="uid://ipoy1i3q3jbe" path="res://art/characters/skeleton.png" id="1_gby50"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tf2x"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbp0c"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl52q"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcvpd"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cisrt"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpxbn"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4rtl"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5raq"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxik6"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yleyu"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_foqsq"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tk08"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrj8u"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omin6"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcas7"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_whfua"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2ku8"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dvsq"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwt2s"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_us6kn"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrfu8"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx2id"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1t5"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3x6q"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ois"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_77qia"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sshre"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7xgl"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikwtd"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3umdo"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l5iv"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fimjs"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dmb6"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6k40"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdhgn"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_egplr"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_446kk"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucbva"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlbpo"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdigg"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smfsl"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8xlq"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu0ns"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_16igu"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgl06"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0uvq"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gajh6"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh8cq"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml2e1"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h33ba"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6162g"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaeib"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lthmv"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1f2c"]
atlas = ExtResource("1_gby50")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11oxg"]
atlas = ExtResource("1_gby50")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11fk4"]
atlas = ExtResource("1_gby50")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4nh7"]
atlas = ExtResource("1_gby50")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjmnd"]
atlas = ExtResource("1_gby50")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dlyn"]
atlas = ExtResource("1_gby50")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_istmm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tf2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbp0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl52q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcvpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cisrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpxbn")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4rtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5raq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxik6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yleyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foqsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tk08")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrj8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omin6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcas7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whfua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2ku8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dvsq")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwt2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us6kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrfu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx2id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1t5")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3x6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ois")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77qia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sshre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7xgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikwtd")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3umdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l5iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fimjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dmb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6k40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdhgn")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_egplr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_446kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucbva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlbpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdigg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smfsl")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8xlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu0ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16igu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgl06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0uvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gajh6")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh8cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml2e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h33ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6162g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaeib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lthmv")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1f2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11oxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11fk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4nh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjmnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dlyn")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ns0bj"]
radius = 54.1479

[sub_resource type="CircleShape2D" id="CircleShape2D_egr0a"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kxtvq"]

[node name="skeleton" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1puio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_istmm")
animation = &"death"
offset = Vector2(0, -6)

[node name="Aggro" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
shape = SubResource("CircleShape2D_ns0bj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_egr0a")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_kxtvq")

[node name="iframe" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_shape_entered" from="Aggro" to="." method="_on_aggro_body_shape_entered"]
[connection signal="body_shape_exited" from="Aggro" to="." method="_on_aggro_body_shape_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="iframe" to="." method="_on_iframe_timeout"]
